--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+	font-size: 62.5%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+	font-size: 1.6rem;
+	background-color: #333;
+	color: #fff;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+nav {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
 }
 
-.App-link {
-  color: #61dafb;
+a, button {
+	text-decoration: none;
+	background-color: #fff;
+	color: crimson;
+	border: 1px solid crimson;
+	border-radius: 10px;
+	margin: 1rem;
+	padding: 1rem;
+	width: 15%;
+	text-align: center;
+	text-transform: uppercase;
+	font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a:hover, a.active, button:hover{
+	color: #fff;
+	background-color: red;
+}
+
+
+/* HEADINGS  */
+h1, footer{
+	text-align: center;
+	margin: 2rem;
+}
+
+.ctn-card {
+	
+}
+
+
+
+button {
+	padding: 0.5rem 1rem;
+	display: block;
+	margin: auto;
+
 }
